// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tableLayout renders 0 1`] = `
Array [
  .c0 {
  table-layout: 0;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: 0;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: 0;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`tableLayout renders function 1`] = `
Array [
  .c0 {
  table-layout: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: has;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: has;
}

<div
    className="c0"
  />,
]
`;

exports[`tableLayout renders invalid theme path 1`] = `
Array [
  .c0 {
  table-layout: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`tableLayout renders negative number 1`] = `
Array [
  .c0 {
  table-layout: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`tableLayout renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  table-layout: July;
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    table-layout: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  table-layout: July;
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    table-layout: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  table-layout: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    table-layout: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    table-layout: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    table-layout: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    table-layout: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`tableLayout renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    table-layout: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    table-layout: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    table-layout: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    table-layout: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    table-layout: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    table-layout: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    table-layout: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    table-layout: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    table-layout: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`tableLayout renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  table-layout: July;
}

@media May {
  .c0 {
    table-layout: August;
  }
}

@media April {
  .c0 {
    table-layout: September;
  }
}

@media January {
  .c0 {
    table-layout: November;
  }
}

@media April {
  .c0 {
    table-layout: August;
  }
}

@media June {
  .c0 {
    table-layout: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  table-layout: July;
}

@media May {
  .c0 {
    table-layout: August;
  }
}

@media April {
  .c0 {
    table-layout: September;
  }
}

@media January {
  .c0 {
    table-layout: November;
  }
}

@media April {
  .c0 {
    table-layout: August;
  }
}

@media June {
  .c0 {
    table-layout: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  table-layout: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    table-layout: November;
  }
}

@media April {
  .c0 {
    table-layout: January;
  }
}

@media January {
  .c0 {
    table-layout: December;
  }
}

@media April {
  .c0 {
    table-layout: April;
  }
}

@media June {
  .c0 {
    table-layout: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    table-layout: November;
  }
}

@media April {
  .c0 {
    table-layout: January;
  }
}

@media January {
  .c0 {
    table-layout: December;
  }
}

@media April {
  .c0 {
    table-layout: April;
  }
}

@media June {
  .c0 {
    table-layout: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`tableLayout renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    table-layout: July;
  }
}

@media April {
  .c0 {
    table-layout: August;
  }
}

@media January {
  .c0 {
    table-layout: September;
  }
}

@media April {
  .c0 {
    table-layout: November;
  }
}

@media June {
  .c0 {
    table-layout: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    table-layout: July;
  }
}

@media April {
  .c0 {
    table-layout: August;
  }
}

@media January {
  .c0 {
    table-layout: September;
  }
}

@media April {
  .c0 {
    table-layout: November;
  }
}

@media June {
  .c0 {
    table-layout: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    table-layout: January;
  }
}

@media April {
  .c0 {
    table-layout: December;
  }
}

@media January {
  .c0 {
    table-layout: April;
  }
}

@media April {
  .c0 {
    table-layout: May;
  }
}

@media June {
  .c0 {
    table-layout: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    table-layout: January;
  }
}

@media April {
  .c0 {
    table-layout: December;
  }
}

@media January {
  .c0 {
    table-layout: April;
  }
}

@media April {
  .c0 {
    table-layout: May;
  }
}

@media June {
  .c0 {
    table-layout: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`tableLayout renders postitive number 1`] = `
Array [
  .c0 {
  table-layout: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`tableLayout renders string 1`] = `
Array [
  .c0 {
  table-layout: July;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: July;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: June;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: June;
}

<div
    className="c0"
  />,
]
`;

exports[`tableLayout renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`tableLayout renders valid theme path 1`] = `
Array [
  .c0 {
  table-layout: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  table-layout: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
